--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ethereum-waffle": "^3.0.0",
     "ethereumjs-util": "^7.0.4",
     "ethers": "5.6.9",
-    "hardhat": "^2.9.9",
+    "hardhat": ">=2.6.1",
     "mocha": "^6.2.2",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.0",
